--- a/src/Radical.Windows.Tests/Radical.Windows.Tests.csproj
+++ b/src/Radical.Windows.Tests/Radical.Windows.Tests.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
     <PackageReference Include="PublicApiGenerator" Version="10.2.0" />
     <PackageReference Include="SharpTestsEx" Version="2.0.0" />
+    <PackageReference Include="coverlet.msbuild" Version="2.9.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
