--- a/src/nuget.config
+++ b/src/nuget.config
@@ -2,6 +2,13 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="Radical Unstable" value="https://www.myget.org/F/radical-unstable/api/v3/index.json" />
   </packageSources>
+  <packageSourceMapping>
+    <packageSource key="nuget.org">
+        <package pattern="*" />
+    </packageSource>
+    <packageSource key="local packages">
+        <package pattern="*" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
