--- a/src/nuget.config
+++ b/src/nuget.config
@@ -2,9 +2,13 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="Radical pre-releases" value="https://f.feedz.io/radical-framework/pre-releases/nuget/index.json" />
   </packageSources>
   <packageSourceMapping>
     <packageSource key="nuget.org">
+        <package pattern="*" />
+    </packageSource>
+    <packageSource key="Radical pre-releases">
         <package pattern="*" />
     </packageSource>
     <packageSource key="local packages">
