--- a/src/Radical.Windows.Tests/Radical.Windows.Tests.csproj
+++ b/src/Radical.Windows.Tests/Radical.Windows.Tests.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
-    <PackageReference Include="Radical" Version="2.1.0" />
+    <PackageReference Include="Radical" Version="3.0.0-beta.1" />
     <PackageReference Include="Unity.Microsoft.DependencyInjection" Version="5.11.5" />
   </ItemGroup>
 
